--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "i18next": "^23.16.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-fs-backend": "^2.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.0.0"
