--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "i18next-http-backend": "^2.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.1",
     "react-router-dom": "^6.0.0"
   }
 }
