--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "lint:ts": "eslint \"**/*.{ts,tsx}\"",
     "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
     "lint:scss": "npx stylelint \"**/*.scss\"",
-    "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix"
+    "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
+    "unit": "jest --config ./congig/jest/jest.config.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
@@ -35,6 +37,7 @@
     "file-loader": "^6.2.0",
     "globals": "^15.12.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.7.0",
     "mini-css-extract-plugin": "^2.9.2",
     "sass": "^1.80.5",
     "sass-loader": "^16.0.3",
