--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.7.2",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-plugin-i18next-extract": "^0.10.0",
     "css-loader": "^7.1.2",
     "eslint": "^8.10.0",
