--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.3",
     "@types/webpack": "^5.28.0",
+    "@types/webpack-bundle-analyzer": "^4.7.0",
     "@types/webpack-dev-server": "^4.7.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-plugin-i18next-extract": "^0.10.0",
@@ -51,6 +52,7 @@
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.14.0",
     "webpack": "^5.96.1",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.7.4"
   },
