--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "production-project",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --env port=3000",
@@ -70,6 +71,5 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.5",
     "react-router-dom": "^6.2.1"
-  },
-  "description": ""
+  }
 }
