--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,8 +39,6 @@
     }
   },
   "include": [
-    "./config/jest/setupTests.ts",
-    "./src/**/*.tsx",
-    "./src/**/*.ts"
+    "./config/jest/setupTests.ts"
   ]
 }
