--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -23,3 +23,5 @@ jobs:
         run: npm install
       - name: build prod
         run: npm run build:prod
+      - name: check ts
+        run: npm run lint:ts
