--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -14,11 +14,9 @@ jobs:
 
     steps:
       - name: Staring Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/checkout@v4
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Verify package.json exists
-        run: ls -la
 
       - name: install modules
         run: npm install
