--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -27,3 +27,7 @@ jobs:
         run: npm run build:prod
       - name: check ts
         run: npm run lint:ts
+      - name: check scss
+        run: npm run lint:scss
+      - name: check unit tests
+        run: npm run test:unit
