--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,5 +1,6 @@
 name: lint, test, build
-run-name: ${{ github.actor }} мы разными схемами должны обмануть эту гребаную 🚀🚀🚀🚀. Мы не рискуем, мы не входим в азарт.
+run-name: ${{ github.actor }} мы разными схемами должны обмануть эту гребаную 🚀🚀🚀🚀.
+          Мы не рискуем, мы не входим в азарт.
 on:
   push:
     branches: [ main ]
