--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -27,12 +27,17 @@ jobs:
       - name: build prod
         run: npm run build:prod
       - name: check ts
+        if: always()
         run: npm run lint:ts
       - name: check scss
+        if: always()
         run: npm run lint:scss
       - name: check unit tests
+        if: always()
         run: npm run test:unit
       - name: build storybook
+        if: always()
         run: npm run storybook:build
       - name: screenshot testing
+        if: always()
         run: npm run test:ui:ci
