--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:ui:json": "node scripts/generate-visual-json-report.js",
     "test:ui:html": "reg-cli --from .loki/report.json --report .loki/report.html",
     "test:ui:dete-reports": "node scripts/deleteLookiReports.js",
-    "test:ui:report":  "npm run test:ui:json && npm run test:ui:html",
+    "test:ui:report":  "npm run test:ui:dete-reports && npm run test:ui:json && npm run test:ui:html",
     "storybook": "start-storybook -p 6006 -c ./config/storybook",
     "storybook:build": "build-storybook -c ./config/storybook"
   },
