--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-virtualized": "^9.22.2",
     "@types/react-window": "^1.8.8",
     "@types/webpack": "^5.28.0",
     "@types/webpack-bundle-analyzer": "^4.4.1",
@@ -99,6 +100,7 @@
     "react-i18next": "^11.15.5",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
+    "react-virtualized": "^9.22.6",
     "react-window": "^1.8.11"
   },
   "loki": {
