--- a/package.json
+++ b/package.json
@@ -99,9 +99,7 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.5",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1",
-    "react-virtualized": "^9.22.6",
-    "react-window": "^1.8.11"
+    "react-router-dom": "^6.2.1"
   },
   "loki": {
     "configurations": {
