--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --env port=3000",
+    "start:vite": "vite",
     "start:dev:server": "node ./json-server/index.js",
     "start:dev": "concurrently \"npm run start:dev:server\" \"npm start\"",
+    "start:dev:vite": "concurrently \"npm run start:dev:server\" \"npm run start:vite\"",
     "build:prod": "webpack  --env mode=production apiUrl=https://ulbiback.vercel.app",
     "build:dev": "webpack  --env mode=development",
     "lint:ts": "eslint \"**/*.{ts,tsx}\"",
@@ -58,6 +60,7 @@
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
+    "@vitejs/plugin-react": "^2.1.0",
     "babel-loader": "^8.2.3",
     "babel-plugin-i18next-extract": "^0.8.3",
     "circular-dependency-plugin": "^5.2.2",
@@ -91,6 +94,8 @@
     "ts-morph": "^16.0.0",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
+    "vite": "^3.1.0",
+    "vite-plugin-svgr": "^2.2.1",
     "webpack": "^5.69.1",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
